--- a/notebooks/eda_raw_analysts_rating.ipynb
+++ b/notebooks/eda_raw_analysts_rating.ipynb
@@ -253,6 +253,222 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f0765fc",
+   "metadata": {},
+   "source": [
+    "## Text analysis(Topic Modeling)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b6fac232",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                            headline  \\\n",
+      "0            Stocks That Hit 52-Week Highs On Friday   \n",
+      "1         Stocks That Hit 52-Week Highs On Wednesday   \n",
+      "2                      71 Biggest Movers From Friday   \n",
+      "3       46 Stocks Moving In Friday's Mid-Day Session   \n",
+      "4  B of A Securities Maintains Neutral on Agilent...   \n",
+      "\n",
+      "                                     headline_tokens  \n",
+      "0               [stocks, hit, 52week, highs, friday]  \n",
+      "1            [stocks, hit, 52week, highs, wednesday]  \n",
+      "2                      [71, biggest, movers, friday]  \n",
+      "3     [46, stocks, moving, fridays, midday, session]  \n",
+      "4  [b, securities, maintains, neutral, agilent, t...  \n",
+      "Top 10 keywords/phrases in headlines:\n",
+      "52 week: 51006\n",
+      "price target: 47274\n",
+      "stocks moving: 40044\n",
+      "mid day: 37324\n",
+      "market update: 33101\n",
+      "earnings scheduled: 32055\n",
+      "initiates coverage: 28993\n",
+      "pre market: 28393\n",
+      "raises pt: 27213\n",
+      "companies trading: 23170\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pereprocessing the text in the 'headline' column\n",
+    "def preprocess_text(text):\n",
+    "    # Convert to lowercase\n",
+    "    text = text.lower()\n",
+    "    # Remove punctuation\n",
+    "    text = text.translate(str.maketrans('', '', string.punctuation))\n",
+    "    # Tokenize (split into words)\n",
+    "    tokens = text.split()\n",
+    "    # Remove stopwords\n",
+    "    tokens = [word for word in tokens if word not in ENGLISH_STOP_WORDS]\n",
+    "    return tokens\n",
+    "\n",
+    "# Apply preprocessing to the 'headline' column and store as a new column\n",
+    "df['headline_tokens'] = df['headline'].dropna().apply(preprocess_text)\n",
+    "\n",
+    "# Show a few examples\n",
+    "print(df[['headline', 'headline_tokens']].head())\n",
+    "\n",
+    "# Create a CountVectorizer for unigrams and bigrams, removing English stopwords\n",
+    "headlines = df['headline'].dropna()\n",
+    "\n",
+    "vectorizer = CountVectorizer(stop_words='english', ngram_range=(2,2))\n",
+    "X = vectorizer.fit_transform(headlines)\n",
+    "\n",
+    "# Sum up the counts of each vocabulary word/phrase\n",
+    "sum_words = X.sum(axis=0)\n",
+    "words_freq = [(word, sum_words[0, idx]) for word, idx in vectorizer.vocabulary_.items()]\n",
+    "words_freq = sorted(words_freq, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "# Print the top 10 keywords/phrases\n",
+    "print(\"Top 10 keywords/phrases in headlines:\")\n",
+    "for word, freq in words_freq[:10]:\n",
+    "    print(f\"{word}: {freq}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6778daed",
+   "metadata": {},
+   "source": [
+    "## Time series analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9b8ee6c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Articles by hour of day:\n",
+      " hour\n",
+      "0.0       67\n",
+      "1.0       14\n",
+      "2.0       57\n",
+      "3.0       93\n",
+      "4.0     1469\n",
+      "5.0     1829\n",
+      "6.0     2476\n",
+      "7.0     5033\n",
+      "8.0     5527\n",
+      "9.0     5965\n",
+      "10.0    7669\n",
+      "11.0    5701\n",
+      "12.0    5732\n",
+      "13.0    2710\n",
+      "14.0    2075\n",
+      "15.0    1612\n",
+      "16.0    3939\n",
+      "17.0    2800\n",
+      "18.0     704\n",
+      "19.0     227\n",
+      "20.0     131\n",
+      "21.0      82\n",
+      "22.0      48\n",
+      "23.0      27\n",
+      "Name: count, dtype: int64\n",
+      "Hour with highest publication: 10.0\n",
+      "\n",
+      "Articles by weekday:\n",
+      " weekday\n",
+      "Monday       10322\n",
+      "Tuesday      11002\n",
+      "Wednesday    11891\n",
+      "Thursday     12688\n",
+      "Friday        9381\n",
+      "Saturday       267\n",
+      "Sunday         436\n",
+      "Name: count, dtype: int64\n",
+      "Weekday with highest publication: Thursday\n",
+      "\n",
+      "Articles by month:\n",
+      " month\n",
+      "January       3068\n",
+      "February      4091\n",
+      "March         6391\n",
+      "April         6468\n",
+      "May          11363\n",
+      "June          7968\n",
+      "July          2131\n",
+      "August        2858\n",
+      "September     2417\n",
+      "October       3079\n",
+      "November      3210\n",
+      "December      2943\n",
+      "Name: count, dtype: int64\n",
+      "Month with highest publication: May\n",
+      "\n",
+      "Articles by year:\n",
+      " year\n",
+      "2011.0      760\n",
+      "2012.0     1187\n",
+      "2013.0     1240\n",
+      "2014.0     1189\n",
+      "2015.0     3695\n",
+      "2016.0     4223\n",
+      "2017.0     3581\n",
+      "2018.0     5395\n",
+      "2019.0     6325\n",
+      "2020.0    28392\n",
+      "Name: count, dtype: int64\n",
+      "Year with highest publication: 2020.0\n",
+      "\n",
+      "Day with highest publication: 2020-03-12 with 973 articles\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  reseting date  to a column\n",
+    "if df.index.name == 'date':\n",
+    "    df = df.reset_index()\n",
+    "# Make sure 'date' is a datetime type\n",
+    "df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
+    "\n",
+    "# HOUR OF DAY (0-23)\n",
+    "df['hour'] = df['date'].dt.hour\n",
+    "hour_counts = df['hour'].value_counts().sort_index()\n",
+    "print(\"Articles by hour of day:\\n\", hour_counts)\n",
+    "print(\"Hour with highest publication:\", hour_counts.idxmax())\n",
+    "\n",
+    "# DAY OF WEEK (Monday-Sunday)\n",
+    "df['weekday'] = df['date'].dt.day_name()\n",
+    "weekday_counts = df['weekday'].value_counts().reindex(\n",
+    "    ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    ")\n",
+    "print(\"\\nArticles by weekday:\\n\", weekday_counts)\n",
+    "print(\"Weekday with highest publication:\", weekday_counts.idxmax())\n",
+    "\n",
+    "# MONTH (January-December)\n",
+    "df['month'] = df['date'].dt.month_name()\n",
+    "month_counts = df['month'].value_counts().reindex(\n",
+    "    ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']\n",
+    ")\n",
+    "print(\"\\nArticles by month:\\n\", month_counts)\n",
+    "print(\"Month with highest publication:\", month_counts.idxmax())\n",
+    "\n",
+    "# YEAR (2011-2020)\n",
+    "df['year'] = df['date'].dt.year\n",
+    "year_counts = df['year'].value_counts().sort_index()\n",
+    "print(\"\\nArticles by year:\\n\", year_counts)\n",
+    "print(\"Year with highest publication:\", year_counts.idxmax())\n",
+    "\n",
+    "# DAY (which specific date had the most articles)\n",
+    "day_counts = df['date'].dt.date.value_counts()\n",
+    "print(\"\\nDay with highest publication:\", day_counts.idxmax(), \"with\", day_counts.max(), \"articles\")"
+   ]
   }
  ],
  "metadata": {
