--- a/notebooks/aapl_notebook.ipynb
+++ b/notebooks/aapl_notebook.ipynb
@@ -18,7 +18,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C:\\\\Users\\\\tsion\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\python313.zip', 'C:\\\\Users\\\\tsion\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\DLLs', 'C:\\\\Users\\\\tsion\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib', 'C:\\\\Users\\\\tsion\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313', 'c:\\\\Users\\\\tsion\\\\OneDrive\\\\Desktop\\\\stock_analysis_week1\\\\.venv', '', 'c:\\\\Users\\\\tsion\\\\OneDrive\\\\Desktop\\\\stock_analysis_week1\\\\.venv\\\\Lib\\\\site-packages', 'c:\\\\Users\\\\tsion\\\\OneDrive\\\\Desktop\\\\stock_analysis_week1\\\\.venv\\\\Lib\\\\site-packages\\\\win32', 'c:\\\\Users\\\\tsion\\\\OneDrive\\\\Desktop\\\\stock_analysis_week1\\\\.venv\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\Users\\\\tsion\\\\OneDrive\\\\Desktop\\\\stock_analysis_week1\\\\.venv\\\\Lib\\\\site-packages\\\\Pythonwin', 'c:\\\\Users\\\\tsion\\\\OneDrive\\\\Desktop\\\\stock_analysis_week1', 'c:\\\\Users\\\\tsion\\\\OneDrive\\\\Desktop\\\\stock_analysis_week1']\n",
       "        Date      Open      High       Low     Close  Adj Close     Volume  \\\n",
       "0 1980-12-12  0.128348  0.128906  0.128348  0.128348   0.098943  469033600   \n",
       "1 1980-12-15  0.122210  0.122210  0.121652  0.121652   0.093781  175884800   \n",
@@ -36,24 +35,73 @@
     }
    ],
    "source": [
+    "import importlib\n",
     "import sys\n",
     "import os\n",
+    "\n",
+    "# Add parent directory to sys.path\n",
     "sys.path.append(os.path.abspath('..'))\n",
+    "\n",
+    "# Import the full module first\n",
+    "import scripts\n",
+    "\n",
+    "# Now reload it to ensure latest changes from __init__.py are used\n",
+    "importlib.reload(scripts)\n",
+    "\n",
+    "# Now safely import the function\n",
     "from scripts.__init__ import load_stock_data\n",
     "\n",
     "# loading aapl data\n",
-    "df = load_stock_data(r'C:\\Users\\tsion\\OneDrive\\Desktop\\stock_analysis_week1\\data\\yfinance_data\\AAPL_historical_data.csv')\n",
+    "df = load_stock_data('../data/yfinance_data/AAPL_historical_Data.csv')\n",
     "if df is not None:\n",
     "    # Proceed with your analysis\n",
     "    print(df.head())\n",
     "else:\n",
     "    print(\"Data could not be loaded.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8541b14a",
+   "metadata": {},
+   "source": [
+    "## applying analysis indicator \n",
+    "performming simple moving averages, RSI (Relative Strength Index), and MACD (Moving Average Convergence Divergence) and saving the output to data/preocessed directory\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a2295615",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Data for AAPL with technical indicators:\n",
+      "        Date     Close  SMA_20  RSI_14  MACD  MACD_signal  Daily_Return\n",
+      "0 1980-12-12  0.128348     NaN     NaN   NaN          NaN           NaN\n",
+      "1 1980-12-15  0.121652     NaN     NaN   NaN          NaN     -0.052171\n",
+      "2 1980-12-16  0.112723     NaN     NaN   NaN          NaN     -0.073398\n",
+      "3 1980-12-17  0.115513     NaN     NaN   NaN          NaN      0.024751\n",
+      "4 1980-12-18  0.118862     NaN     NaN   NaN          NaN      0.028992\n",
+      "Saved indicators for AAPL to ../data/processed/technical_indicators_AAPL.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scripts import calculate_technical_indicators\n",
+    "\n",
+    "# Call the function\n",
+    "calculate_technical_indicators('AAPL', '../data/yfinance_data/AAPL_historical_Data.csv')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "newenv",
    "language": "python",
    "name": "python3"
   },
@@ -67,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
