--- a/notebooks/nvda_notebook.ipynb
+++ b/notebooks/nvda_notebook.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ff1a4f4b",
    "metadata": {},
    "outputs": [
@@ -80,14 +80,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Data for GOOG with technical indicators:\n",
+      "Data for NVDA with technical indicators:\n",
       "        Date     Close  SMA_20  RSI_14  MACD  MACD_signal  Daily_Return\n",
-      "0 2004-08-19  2.499133     NaN     NaN   NaN          NaN           NaN\n",
-      "1 2004-08-20  2.697639     NaN     NaN   NaN          NaN      0.079430\n",
-      "2 2004-08-23  2.724787     NaN     NaN   NaN          NaN      0.010064\n",
-      "3 2004-08-24  2.611960     NaN     NaN   NaN          NaN     -0.041408\n",
-      "4 2004-08-25  2.640104     NaN     NaN   NaN          NaN      0.010775\n",
-      "Saved indicators for GOOG to ../data/processed/technical_indicators_GOOG.csv\n"
+      "0 1999-01-22  0.041016     NaN     NaN   NaN          NaN           NaN\n",
+      "1 1999-01-25  0.045313     NaN     NaN   NaN          NaN      0.104764\n",
+      "2 1999-01-26  0.041797     NaN     NaN   NaN          NaN     -0.077594\n",
+      "3 1999-01-27  0.041667     NaN     NaN   NaN          NaN     -0.003110\n",
+      "4 1999-01-28  0.041536     NaN     NaN   NaN          NaN     -0.003144\n",
+      "Saved indicators for NVDA to ../data/processed/technical_indicators_NVDA.csv\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     "from scripts import calculate_technical_indicators\n",
     "\n",
     "# Call the function\n",
-    "calculate_technical_indicators('GOOG', '../data/yfinance_data/GOOG_historical_Data.csv')"
+    "calculate_technical_indicators('NVDA', '../data/yfinance_data/NVDA_historical_Data.csv')"
    ]
   }
  ],
