--- a/notebooks/msft_notebook.ipynb
+++ b/notebooks/msft_notebook.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "862cbe35",
    "metadata": {},
    "outputs": [
@@ -80,14 +80,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Data for GOOG with technical indicators:\n",
+      "Data for MSFT with technical indicators:\n",
       "        Date     Close  SMA_20  RSI_14  MACD  MACD_signal  Daily_Return\n",
-      "0 2004-08-19  2.499133     NaN     NaN   NaN          NaN           NaN\n",
-      "1 2004-08-20  2.697639     NaN     NaN   NaN          NaN      0.079430\n",
-      "2 2004-08-23  2.724787     NaN     NaN   NaN          NaN      0.010064\n",
-      "3 2004-08-24  2.611960     NaN     NaN   NaN          NaN     -0.041408\n",
-      "4 2004-08-25  2.640104     NaN     NaN   NaN          NaN      0.010775\n",
-      "Saved indicators for GOOG to ../data/processed/technical_indicators_GOOG.csv\n"
+      "0 1986-03-13  0.097222     NaN     NaN   NaN          NaN           NaN\n",
+      "1 1986-03-14  0.100694     NaN     NaN   NaN          NaN      0.035712\n",
+      "2 1986-03-17  0.102431     NaN     NaN   NaN          NaN      0.017250\n",
+      "3 1986-03-18  0.099826     NaN     NaN   NaN          NaN     -0.025432\n",
+      "4 1986-03-19  0.098090     NaN     NaN   NaN          NaN     -0.017390\n",
+      "Saved indicators for MSFT to ../data/processed/technical_indicators_MSFT.csv\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     "from scripts import calculate_technical_indicators\n",
     "\n",
     "# Call the function\n",
-    "calculate_technical_indicators('GOOG', '../data/yfinance_data/GOOG_historical_Data.csv')"
+    "calculate_technical_indicators('MSFT', '../data/yfinance_data/MSFT_historical_Data.csv')"
    ]
   }
  ],
