--- a/notebooks/meta_notebook.ipynb
+++ b/notebooks/meta_notebook.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a7a3c0fa",
    "metadata": {},
    "outputs": [
@@ -80,14 +80,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Data for GOOG with technical indicators:\n",
-      "        Date     Close  SMA_20  RSI_14  MACD  MACD_signal  Daily_Return\n",
-      "0 2004-08-19  2.499133     NaN     NaN   NaN          NaN           NaN\n",
-      "1 2004-08-20  2.697639     NaN     NaN   NaN          NaN      0.079430\n",
-      "2 2004-08-23  2.724787     NaN     NaN   NaN          NaN      0.010064\n",
-      "3 2004-08-24  2.611960     NaN     NaN   NaN          NaN     -0.041408\n",
-      "4 2004-08-25  2.640104     NaN     NaN   NaN          NaN      0.010775\n",
-      "Saved indicators for GOOG to ../data/processed/technical_indicators_GOOG.csv\n"
+      "Data for META with technical indicators:\n",
+      "        Date      Close  SMA_20  RSI_14  MACD  MACD_signal  Daily_Return\n",
+      "0 2012-12-12  27.580000     NaN     NaN   NaN          NaN           NaN\n",
+      "1 2012-12-13  28.240000     NaN     NaN   NaN          NaN      0.023930\n",
+      "2 2012-12-14  26.809999     NaN     NaN   NaN          NaN     -0.050637\n",
+      "3 2012-12-17  26.750000     NaN     NaN   NaN          NaN     -0.002238\n",
+      "4 2012-12-18  27.709999     NaN     NaN   NaN          NaN      0.035888\n",
+      "Saved indicators for META to ../data/processed/technical_indicators_META.csv\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     "from scripts import calculate_technical_indicators\n",
     "\n",
     "# Call the function\n",
-    "calculate_technical_indicators('GOOG', '../data/yfinance_data/GOOG_historical_Data.csv')"
+    "calculate_technical_indicators('META', '../data/yfinance_data/META_historical_Data.csv')"
    ]
   }
  ],
