--- a/notebooks/aapl_notebook.ipynb
+++ b/notebooks/aapl_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2a556ea2",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "a2295615",
    "metadata": {},
    "outputs": [
@@ -96,6 +96,35 @@
     "\n",
     "# Call the function\n",
     "calculate_technical_indicators('AAPL', '../data/yfinance_data/AAPL_historical_Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88a05920",
+   "metadata": {},
+   "source": [
+    "## financial metrics and data visualization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b70bb2d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded data for AAPL\n",
+      "Saved visualizations for AAPL to reports/figures/\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scripts import visualize_indicators\n",
+    "\n",
+    "visualize_indicators('AAPL', '../data/processed/technical_indicators_AAPL.csv')"
    ]
   }
  ],
