calling metrics and visualization

--- a/notebooks/amzn_notebook.ipynb
+++ b/notebooks/amzn_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "75eb2a40",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ce41181b",
    "metadata": {},
    "outputs": [
@@ -96,6 +96,35 @@
     "\n",
     "# Call the function\n",
     "calculate_technical_indicators('AMZN', '../data/yfinance_data/AMZN_historical_Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcd00ac2",
+   "metadata": {},
+   "source": [
+    "## financial metrics and data visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f5ff7e1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded data for AMZN\n",
+      "Saved visualizations for AMZN to reports/figures/\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scripts import visualize_indicators\n",
+    "\n",
+    "visualize_indicators('AMZN', '../data/processed/technical_indicators_AMZN.csv')"
    ]
   }
  ],
