calling metrics and visualization function

--- a/notebooks/meta_notebook.ipynb
+++ b/notebooks/meta_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "d97186a7",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "a7a3c0fa",
    "metadata": {},
    "outputs": [
@@ -96,6 +96,35 @@
     "\n",
     "# Call the function\n",
     "calculate_technical_indicators('META', '../data/yfinance_data/META_historical_Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "364c5f2f",
+   "metadata": {},
+   "source": [
+    "## financial metrics and data visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8f5e012c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded data for META\n",
+      "Saved visualizations for META to reports/figures/\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scripts import visualize_indicators\n",
+    "\n",
+    "visualize_indicators('META', '../data/processed/technical_indicators_META.csv')"
    ]
   }
  ],
