calling metrics and visualization function

--- a/notebooks/msft_notebook.ipynb
+++ b/notebooks/msft_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "46c10fcb",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "862cbe35",
    "metadata": {},
    "outputs": [
@@ -96,6 +96,35 @@
     "\n",
     "# Call the function\n",
     "calculate_technical_indicators('MSFT', '../data/yfinance_data/MSFT_historical_Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fe6745f",
+   "metadata": {},
+   "source": [
+    "## financial metrics and data visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59fa06f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded data for MSFT\n",
+      "Saved visualizations for MSFT to reports/figures/\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scripts import visualize_indicators\n",
+    "\n",
+    "visualize_indicators('MSFT', '../data/processed/technical_indicators_MSFT.csv')"
    ]
   }
  ],
