calling metrics and visualization function

--- a/notebooks/tsla_notebook.ipynb
+++ b/notebooks/tsla_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "46fd095a",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "fc24b443",
    "metadata": {},
    "outputs": [
@@ -96,6 +96,35 @@
     "\n",
     "# Call the function\n",
     "calculate_technical_indicators('TSLA', '../data/yfinance_data/TSLA_historical_Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66e442a5",
+   "metadata": {},
+   "source": [
+    "## financial metrics and data visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8925923f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded data for TSLA\n",
+      "Saved visualizations for TSLA to reports/figures/\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scripts import visualize_indicators\n",
+    "\n",
+    "visualize_indicators('TSLA', '../data/processed/technical_indicators_TSLA.csv')"
    ]
   }
  ],
